# BililiveRecorder-webhook-docker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  LICENSE.md  Makefile  README.md  compose.proxy.yml  compose.yml  hooks.json  pyproject.toml  requirements.txt  supervisord.conf  update.sh  webhook.Dockerfile
action/: pyproject.toml
action/action/: celery.py  celeryconfig.py  main.py  tasks.py
action/action/command/: __init__.py
action/action/config/: __init__.py  biliup_config.py
action/action/event/: event.py
action/action/util/: __init__.py
webhook/: __main__.py  celery.py  celeryconfig.py  hooks.json  on-recorder-file-closed.sh  pyproject.toml  requirements.txt  tasks.py
webhook/command/: aliyunpan_command.py  baidupcs_command.py  biliup_command.py  cloud_storage_command.py  command.py  danmaku_factory_command.py  ffmpeg_command.py
webhook/composer/: __init__.py  composer.py
webhook/composer/signature/: __init__.py  batch_remove_signature.py  batch_upload_cloud_signature.py  burn_and_upload_signature.py  burn_danmaku_signature.py  remove_signature.py  upload_aliyunpan_signature.py  upload_and_burn_signature.py  upload_baidupcs_signature.py  upload_bilibili_and_cloud_signature.py  upload_bilibili_signature.py  upload_cloud_signature.py  upload_signature.py
webhook/config/: __init__.py  biliup_config.py  config.py
webhook/event/: event_files.py
webhook/task/: __init__.py  burn_danmaku_task.py  remove_task.py  upload_aliyunpan_task.py  upload_baidupcs_task.py  upload_bilibili_task.py
webhook/task/base/: task.py
webhook/util/: __init__.py  argparse_utils.py  cli_utils.py  dataclass_utils.py  iter_utils.py
webhook/webhook/: __main__.py  main.py  tasks.py
webhook/webhook/command/: __init__.py  baidupcs_command.py  biliup_command.py  cloud_storage_command.py  command.py  danmaku_factory_command.py  ffmpeg_command.py
webhook/webhook/composer/: composer.py
webhook/webhook/config/: biliup_config.py  config.py
webhook/webhook/event/: __init__.py  event.py  event_files.py
webhook/webhook/task/: burn_danmaku_task.py  remove_task.py  task.py  upload_aliyunpan_task.py  upload_baidupcs_task.py  upload_bilibili_task.py
webhook/webhook/util/: __init__.py  dataclass_utils.py  path_utils.py  (+1 more)
(+8 files in other folders)
