[tool.poetry]
name = "webhook"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["PuzzleMoon <32855965+puzzlemoondev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boltons = "^23.0.0"
celery = { extras = ["redis"], version = "^5.3.4" }
click = "^8.1.7"
flower = "^2.0.1"
pyyaml = "^6.0.1"
supervisor = "^4.2.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
