[tool.poetry]
name = "webhook"
version = "0.1.0"
description = ""
authors = ["PuzzleMoon <32855965+puzzlemoondev@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
celery = { extras = ["redis"], version = "^5.2.7" }
flower = "^1.2.0"
pyyaml = "^6.0"
fastapi = "^0.92.0"
uvicorn = { extras = ["standard"], version = "^0.20.0" }
supervisor = "^4.2.5"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
